# medium-clone-fullstack

./: .gitignore  README.md  app.py  forms.py  models.py  pyproject.toml  replit.md  routes.py
static/css/: style.css
static/js/: editor.js  medium-editor.js
templates/: 404.html  500.html  base.html  dashboard.html  edit_story.html  index.html  login.html  profile.html  read_story.html  register.html  write_story.html
